# Protco-Screen

./: package-lock.json  package.json
android/: .gitignore  build.gradle  config.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: cityAndDomain.json  country.json  country_en.json  country_zh.json  index.android.bundle
android/common/: build.gradle
android/common/src/main/: AndroidManifest.xml
android/device/: build.gradle
android/device/src/main/: AndroidManifest.xml
android/family/: build.gradle
android/family/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/iflytek/: build.gradle
android/iflytek/src/main/: AndroidManifest.xml
android/ipc/: .gitignore  build.gradle
android/ipc/src/main/: AndroidManifest.xml
android/ipc/src/main/cpp/: CMakeLists.txt  rino_api.cpp
android/module_ble/: build.gradle
android/module_ble/src/main/: AndroidManifest.xml
android/scan/: build.gradle
android/scan/src/main/: AndroidManifest.xml
android/scene/: build.gradle
android/scene/src/main/: AndroidManifest.xml
android/upush/: build.gradle
android/upush/src/main/: AndroidManifest.xml
android/upush/src/main/assets/: push_config.json
android/user/: build.gradle
android/user/src/main/: AndroidManifest.xml
android/voice-assistant/: build.gradle
android/voice-assistant/src/main/: AndroidManifest.xml
android/xpopup/: build.gradle
patches/: @react-native-community+blur+4.2.0.patch
(+1049 files in other folders)
